
[[x6.0-rmi]]
=== RMI Removal

The `spring-integration-rmi` module has been removed altogether after being deprecated in previous versions.
There is no replacement: it is recommended to migrate to more secure network and application protocols, such as WebSockets, RSockets, gRPC or REST.

[[x6.0-gemfire]]
=== GemFire Removal

The `spring-integration-gemfire` module has been removed altogether since there is no Spring Data `2022.0.0` support for VMware GemFire or Apache Geode.

[[x6.0-http]]
=== HTTP Changes

The `#cookies` variable for expression evaluation context, exposed in the `HttpRequestHandlingEndpointSupport`, is now a `MultiValueMap` to carry all the values for cookies set by the client.
See <<./http.adoc#http,HTTP Support>> for more information.

=== Apache Kafka Changes

When providing a `RetryTemplate` on the inbound gateway or message-driven channel adapter, if an `errorChannel` is also provided, an `ErrorMessageSendingRecoverer` is automatically configured.

In addition, the new `KafkaErrorMessageSendingRecoverer` is provided; this can be used with a `DefaultErrorHandler` to avoid issues with long aggregated retry delays causing partitions rebalances.

See <<./kafka.adoc#kafka,Spring for Apache Kafka Support>> for more information.

=== JDBC Changes

The `DefaultLockRepository` can now be supplied with a `PlatformTransactionManager` instead of relying on the primary bean from the application context.

See <<./jdbc.adoc#jdbc-lock-registry,JDBC Lock Registry>> for more information.

=== TCP/IP Changes

The `lookupHost` property of the `AbstractConnectionFactory` and `DatagramPacketMessageMapper` is now set to `false` by default to avoid delays in the environments where DNS is not configured.

See <<./ip.adoc#ip,TCP and UDP Support>> for more information.